##
##  CMakeLists.txt
##  xkaapi
##
##  Created by CL and TG on 04/02/09.
##  Copyright 2009 INRIA. All rights reserved.
##

SUBDIRS=xkaapi kaapixx atha kastl

DIST=check-headers.am

# NOT YET USED:  	atha_monotonic.cpp \
#	atha_array.h \
#	ka_format.h \
#	ka_stream.h 

# NOT YET USED:  atha_stream.cpp
#  atha_format.cpp

